--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,7 @@ a {
 /* Ketik code Anda dibawah */
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-image: url(top_en.png);
   background-size: cover;
   color: white;
   text-align: center;
