--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,190 +1,71 @@
-/* Reset CSS (JANGAN DIHAPUS) */
-html, body,
-ul, ol, li,
-h1, h2, h3, h4, h5, h6, p, div {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Lucida Grande";
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* Ketik code Anda dibawah */
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top_en.png);
+  background-image: url(https://image.freepik.com/free-vector/forex-trading-background_23-2148594605.jpg);
   background-size: cover;
   color: white;
-  text-align: center;
+  text-align: left;
 }
 
-.container {
-  width: 1170px;
-  margin: 0 auto;
+.container-wrapper{
+  margin-left:70px;
 }
 
 .top-wrapper h1 {
-  opacity: 0.7;
+  opacity: 0.8;
   font-size: 45px;
-  letter-spacing: 5px;
   margin-bottom: 10px;
 }
 
+.top-wrapper h2 {
+    opacity: 0.8;
+    font-size: 45px;
+    margin-bottom: 10px;
+}
+
 .top-wrapper p {
-  opacity: 0.7;
+  opacity: 1;
   margin-bottom: 3px;
 }
 
 .btn-wrapper {
-  margin: 20px 0;
+  margin: 30px 0;
+  font-style: unset;
 }
 
 .btn-wrapper p {
   margin: 10px 0;
 }
 
-.signup {
-  background-color: #239b76;
-}
-
-.fb {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.tw {
-  background-color: #55acee;
-}
-
-.btn {
+.btn-offer {
+  background-color: #661E0A;
   padding: 12px 24px;
   color: white;
   display: inline-block;
-  opacity: 0.8;
+  opacity: 0.9;
   border-radius: 4px;
 }
 
-.btn:hover {
+.btn-offer:hover {
   opacity: 1;
 }
 
-.fa {
-  margin-right: 5px;
-}
+@media (max-width: 400px) {
+    .top-wrapper {
+        padding: 70px 0 170px 0;
+        background-size: 400px;
+        color: white;
+        text-align: center;       
+    }
 
-header {
-  height: 65px;
-  width: 100%;
-  background-color: rgba(34,49,52, 0.9);
-  position: fixed;
-  top: 0;
-  z-index: 10;
-}
+    .top-wrapper h1 {
+        font-size: 45px;       
+    }
 
-.logo {
-  width: 124px;
-  margin-top: 20px;
-}
+    .top-wrapper h2 {
+        font-size: 30px;       
+    }
 
-.header-left {
-  float: left;
-}
-
-.header-right {
-  float: right;
-  background-color: rgba(255,255,255, 0.3);
-  transition: all 0.5s;
-}
-
-.header-right:hover {
-  background-color: rgba(255,255,255, 0.5);
-}
-
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
-}
-
-.lesson-wrapper {
-  height: 500px;
-  padding-bottom: 80px;
-  background-color: #f7f7f7;
-  text-align: center;
-}
-
-.heading {
-  padding: 60px 0 30px 0;
-  color: #5f5d60;
-}
-
-.heading h2 {
-  font-weight: normal;
-}
-
-.lesson {
-  float: left;
-  width: 25%;
-}
-
-.lesson-icon {
-  position: relative;
-}
-
-.lesson-icon p {
-  position: absolute;
-  top: 90px;
-  width: 100%;
-  color: white;
-}
-
-.txt-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 20px;
-  font-size: 15px;
-  color: #b3aeb5;
-}
-
-.message-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
-  text-align: center;
-}
-
-.message {
-  padding: 15px 40px;
-  background-color: #5dca88;
-  opacity: 0.8;
-  cursor: pointer;
-  box-shadow: 0 7px #1a7940;
-}
-
-.message:active {
-  position:relative;
-  top: 7px;
-  box-shadow: none;
-}
-
-footer img {
-  width: 125px;
-}
-
-footer p {
-  font-size: 12px;
-  color: #b3aeb5;
-}
-
-footer {
-  padding: 30px 0 0 0;
+    .container-wrapper{
+        margin: auto;
+    }
 }
