--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@
   opacity: 1;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 670px) {
     .top-wrapper {
         padding: 70px 0 170px 0;
         background-size: 400px;
@@ -58,14 +58,38 @@
     }
 
     .top-wrapper h1 {
-        font-size: 45px;       
+        font-size: 45px;
+        opacity: 0.9;
     }
 
     .top-wrapper h2 {
-        font-size: 30px;       
+        font-size: 30px;
+        opacity: 0.9;       
     }
 
     .container-wrapper{
         margin: auto;
+    }
+}
+
+@media (max-width: 1000px) {
+    .top-wrapper {
+        padding: 100px 0 170px 0;
+        background-size: cover;
+        color: white;       
+    }
+
+    .top-wrapper h1 {
+        font-size: 45px;
+        opacity: 0.9;
+    }
+
+    .top-wrapper h2 {
+        font-size: 30px;
+        opacity: 0.9;       
+    }
+
+    .container-wrapper{
+        margin: 5%;
     }
 }
