--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@
   opacity: 1;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 760px) {
     .top-wrapper {
         padding: 70px 0 170px 0;
         background-size: 400px;
@@ -76,7 +76,8 @@
     .top-wrapper {
         padding: 100px 0 170px 0;
         background-size: cover;
-        color: white;       
+        color: white;
+        text-align: center;
     }
 
     .top-wrapper h1 {
