--- a/stylesheet.css
+++ b/stylesheet.css
@@ -149,7 +149,7 @@ footer {
 }
   
 footer img {
-    width: 125px;
+    width: 200px;
 }
   
 footer p {
@@ -161,10 +161,14 @@ footer h3 {
     color: #003776;
 }
   
-footer .container li {
+footer .container .kolom-kiri {
     float: left;
     list-style: none;
-    padding: 0px 10px 0 10px;
+}
+
+footer .container .kolom-kanan {
+    
+    list-style: none;
 }
 
 .paling-bawah {
@@ -172,10 +176,29 @@ footer .container li {
     padding-top: 150px;
 }
 
+.kolom-kanan {
+    padding: 0px 30px 0px 30px;
+}
+
 .kolom-tengah h3 {
     color: white;
 }
-.kolom-kanan h3 {
+
+.kolom-kanan-kanan {
+    padding: 0px 10px 0px 10px;
+    float: right;
+}
+
+.kolom-kanan-kanan h3 {
+    color: white;
+}
+
+.kolom-kanan-kiri {
+    padding: 0px 10px 0px 10px;
+    float: right;
+}
+
+.kolom-kanan-kiri h3 {
     color: white;
 }
 
@@ -213,7 +236,11 @@ footer .container li {
     }
 
     .flex-list .lesson {
-        margin: auto;
+        align-self: center
+    }
+
+    .flex-list .lesson img{
+        width: 175px;
     }
 
     .mid-wrapper {
@@ -221,11 +248,16 @@ footer .container li {
     }
     
     .mid-wrapper .container {
-        height: 1500px;
-        padding-bottom: 90px;
+        height: 1550px;
+        padding: 0px 5px 90px 5px;
         background-color: #f7f7f7;
         text-align: center;
         opacity: .85;
+    }
+
+    .txt-contents {
+        color: black;
+        opacity: .7;
     }
 
     .kolom-kiri img {
@@ -239,25 +271,19 @@ footer .container li {
         float: left;
     }
 
-    footer .container li {
-        float: left;
-        list-style: none;
-        padding: 0px 5px 0 5px;
+    footer .container img {
+        width: 100px;
     }
 
-    .kolom-tengah h3 {
-        font-size: 15px;
-    }
-
-    .kolom-tengah p {
-        font-size: 10px;
-    }
-
-    .kolom-kanan h3 {
-        font-size: 15px;
+    footer .container .kolom-kanan {
+        padding: 0px;
     }
     
-    .kolom-kanan p a {
+    footer .container .kolom-kanan h3 {
+        font-size: 15px;
+    }
+
+    footer .container .kolom-kanan p {
         font-size: 10px;
     }
 }
@@ -299,5 +325,9 @@ footer .container li {
     .top-wrapper p {
         opacity: 1;
         margin-top: 100px;
-      }
+    }
+
+    footer img {
+        width: 200px;
+    }
 }
